--- a/java/study/blog/blog/src/main/resources/templates/Member/LoginForm.html
+++ b/java/study/blog/blog/src/main/resources/templates/Member/LoginForm.html
@@ -3,23 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 </head>
 <body>
-  <form action="/action_page.php">
     <div class="form-group">
-      <label for="email">username:</label>
-      <input type="email" class="form-control" placeholder="Enter email" id="email">
+      <label for="username">username:</label>
+      <input type="text" class="form-control" placeholder="Enter email" id="username">
     </div>
     <div class="form-group">
       <label for="pwd">Password:</label>
       <input type="password" class="form-control" placeholder="Enter password" id="pwd">
     </div>
-    <div class="form-group form-check">
-      <label class="form-check-label">
-        <input class="form-check-input" type="checkbox"> Remember me
-      </label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+    <button type="submit" class="btn btn-primary" id="btn-login">Submit</button>
+    <script src="/blog/user.js"></script>
 </body>
 </html>
