--- a/java/study/blog/blog/src/main/resources/templates/index.html
+++ b/java/study/blog/blog/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -12,11 +12,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="member/login">로그인 <span class="sr-only">(current)</span></a>
+                <li th:if="${session.principal == null}" class="nav-item">
+                    <a class="nav-link" href="member/login">로그인</a>
                 </li>
-                <li class="nav-item">
+                <li th:if="${session.principal == null}" class="nav-item">
                     <a class="nav-link" href="member/join">회원가입</a>
+                </li>
+                <li th:if="${session.principal != null}" class="nav-item">
+                    <a class="nav-link" href="member/logout">로그아웃</a>
                 </li>
             </ul>
         </div>
