--- a/myweb/myweb/src/main/resources/templates/projectEdit.html
+++ b/myweb/myweb/src/main/resources/templates/projectEdit.html
@@ -163,7 +163,7 @@
       })
 
       if (document.querySelector('#check').innerText === '0') {
-        axios.post('http://localhost:5000/project', {
+        axios.post('http://myweb-env-1.eba-2vukutps.ap-northeast-2.elasticbeanstalk.com/project', {
           title : document.querySelector('#제목').innerHTML,
           period : document.querySelector('#기간').innerHTML,
           personnel : document.querySelector('#인원').innerHTML,
